libs/modkit-canonical-errors/tests/ui/missing_reason_on_aborted.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<modkit_canonical_errors::builder::ResourceOptional, modkit_canonical_errors::builder::NeedsReason>`, but its trait bounds were not satisfied
  --> tests/ui/missing_reason_on_aborted.rs:10:92
   |
10 |     let _err = UserResourceError::aborted("Operation aborted due to concurrency conflict").create();
   |                                                                                            ^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: src/builder.rs
   |
   | pub struct NeedsReason;
   | ---------------------- doesn't satisfy `_: ContextResolved`
   |
   = note: the following trait bounds were not satisfied:
           `modkit_canonical_errors::builder::NeedsReason: modkit_canonical_errors::builder::ContextResolved`
